[gd_scene load_steps=11 format=3 uid="uid://dan5pu0ifllrm"]

[ext_resource type="Texture2D" uid="uid://defqfp56o07ws" path="res://tower/textures/basic_tower_base.png" id="1"]
[ext_resource type="Texture2D" uid="uid://b58os53ibxkix" path="res://tower/textures/basic_tower_body2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dk8dgyp1mjgfo" path="res://tower/textures/basic_tower_body1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bmnpyiohvdpwh" path="res://tower/textures/basic_tower_roof.png" id="4"]
[ext_resource type="Script" path="res://tower/tower.gd" id="5"]
[ext_resource type="PackedScene" path="res://bullet/bullet.tscn" id="6"]
[ext_resource type="Resource" path="res://tower/resources/basic_tower.tres" id="7"]
[ext_resource type="PackedScene" path="res://tower/stats_panel.tscn" id="8"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(59.25, 113)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1276.38, 60)

[node name="Tower" type="StaticBody2D"]
position = Vector2(-1, 1)
collision_mask = 4
input_pickable = true
script = ExtResource("5")
resource = ExtResource("7")
bullet_scene = ExtResource("6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.625, -34.5)
shape = SubResource("2")

[node name="Base" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1")

[node name="Body1" type="Sprite2D" parent="Base"]
position = Vector2(0, -31)
texture = ExtResource("2")

[node name="Body2" type="Sprite2D" parent="Base/Body1"]
position = Vector2(0, -30.332)
texture = ExtResource("3")

[node name="Roof" type="Sprite2D" parent="Base/Body1/Body2"]
position = Vector2(0, -45)
texture = ExtResource("4")

[node name="ShootTriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false
linear_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootTriggerArea"]
position = Vector2(726.188, -37)
shape = SubResource("1")

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="ShootPoint" type="Node2D" parent="."]
position = Vector2(64, -64)

[node name="StatsPanel" parent="." instance=ExtResource("8")]
visible = false
layout_mode = 3
offset_left = -95.0
offset_top = 23.0
offset_right = 97.0
offset_bottom = 87.0

[connection signal="mouse_entered" from="." to="." method="_on_Tower_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tower_mouse_exited"]
[connection signal="body_entered" from="ShootTriggerArea" to="." method="_on_ShootArea_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
